Fix test not working anymore with IDEA 2026.1+